# median-statistic

./: .gitignore  Makefile  README.md  pyproject.toml
median_statistic/: __init__.py  main.py
median_statistic/median_coffee/: median_coffee.py
median_statistic/reports/: median_coffee.py
tests/: conftest.py  test_main.py  test_median_coffee.py
