[project]
name = "median-statistic"
version = "0.1.0"
description = "Приложение для статистики студенческой активности"
authors = [
    {name = "Kirill67tyar",email = "kirillbogomolov.ric@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{ include = "median_statistic" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
